# playground

./: .bazelrc  .gitignore  .scalafmt.conf  BUILD.bazel  MODULE.bazel  Makefile  READMD.md
.github/workflows/: github-actions-demo.yaml  hello.yaml
.github/workflows/docker/: hello.yaml
c/: BUILD.bazel
cpp/: BUILD.bazel  CMakeLists.txt  default_parameter.cc  explicit.cc  function2.cc  function4.cc  left_right_reference.cc  optional.cc  shared_ptr2.cc  static_member.cc
cpp/build-systems/bazel/: README.md
cpp/build-systems/cmake/: README.md
cpp/concurrency/: BUILD.bazel  threads.cc
cpp/containers/: array.cc  vector.cc
cpp/io/: BUILD.bazel  fstream.cc
cpp/io-operations/: BUILD.bazel
cpp/language-features/: BUILD.bazel  auto.cc  foreach.cc  function.cc  function3.cc  hello.cc  lambda.cc  shared_ptr.cc  shared_ptr3.cc
cpp/src/: BUILD.bazel  factorial.cc  factorial_test.cc
cpp/src/boost/asio/: BUILD.bazel  timer1.cc  timer2.cc  timer3.cc  timer4.cc
cpp/tests/: BUILD.bazel
cpp/third-party-libs/boost-asio/: BUILD.bazel  daytime1.cc  daytime2.cc  sync_client.cc  sync_server.cc  timer5.cc
docker/hello/: Dockerfile  hello.sh
docker/spark/3.5.6-jindosdk6.9.1/: Dockerfile
go/: BUILD.bazel
go/cgo/: BUILD.bazel
go/cgo/example1/: main.go
go/cgo/example2/: main.go
go/cgo/example3/: main.go
go/cgo/example4/: hello.c  hello.h  main.go
go/cobra/: go.mod  main.go
go/cobra/version/: version.go
go/defer/: defer.go
go/pointer/: main.go
go/prometheus/: go.mod  prometheus.go
go/time/: ticker.go
go/time/rate/: go.mod
go/time/rate/limiter/: main.go
go/time/rate/sometimes/: main.go
go/variadic-function/: main.go
java/: BUILD.bazel
java/playground/: README.md  pom.xml
java/playground/src/main/java/com/example/: BufferedReaderExample.java  BufferedWriterExample1.java  BufferedWriterExample2.java  LoggingExample.java  SynchronizedExample.java  ThreadExample1.java  ThreadExample2.java  ThreadExample3.java  ThreadExample4.java  TimeClient.java  TimeServer.java
java/playground/src/main/java/com/example/io/: FileInputStreamExample.java  PrintWriterExample.java
java/playground/src/main/java/com/example/io/netty/discard/: DiscardServer.java  DiscardServerHandler.java
java/playground/src/main/java/com/example/util/concurrent/: ExecutorServiceExample1.java  ExecutorServiceExample2.java  ExecutorServiceExample3.java  ExecutorServiceExample4.java  ExecutorServiceExample5.java  ExecutorServiceExample6.java  ExecutorServiceExample7.java  ExecutorServiceExample8.java
java/playground/src/main/java/com/example/util/concurrent/locks/: ReentrantLockExample.java
java/playground/src/main/resources/: log4j2.xml  poem.txt
java/playground/src/test/java/com/example/: HelloWorldTest.java
mpi/: README.md  hello.py  parallel_sum.py  requirements.txt
python/: BUILD.bazel  math_operations.py
python/aiohttp/: client.py  server.py
python/asyncio/: BUILD.bazel  example1.py  example2.py  example3.py  example4.py  example5.py
python/cython/: READMD.md  integrate.py  integrate2.py  integrate3.pyx  main.py  requirements.txt  setup.py
python/packaging_example/: README.md  pyproject.toml
python/tests/: test_math_operations.py
scala/: .gitignore  README.md  build.sbt
scala/case-class/: example1.scala  example2.scala  example3.scala  example4.scala
scala/generic-class/: example1.scala
scala/list-comprehension/: example1.scala  example2.scala
scala/pattern-match/: example1.scala  example2.scala  example3.scala  example4.scala  example5.scala  example6.scala
scala/src/main/scala/com/example/: HelloWorld.scala  Person.scala
shell/: BUILD.bazel  for-loop.sh  function.sh
spark/: .scalafmt.conf  build.sbt
spark/src/main/scala/example/: MapPartitionsExample.scala  MapPartitionsWithIndexExample.scala  RDDToDataFrameExample.scala  RDDToDataFrameExample2.scala
