###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(name = "playground", version = "0.1.0")

bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "rules_python", version = "1.4.1")
bazel_dep(name = "rules_shell", version = "0.5.0")

bazel_dep(name = "abseil-cpp", version = "20250512.0")

