# C++ Playground - Reorganized by Topic
#
# Structure:
#   language-features/   - C++ language feature demonstrations
#   concurrency/         - Threading and concurrency examples
#   io-operations/       - File I/O examples
#   networking/          - Network programming
#   third-party-libs/    - Examples using external libraries
#   tests/               - Unit tests
#   build-systems/       - Build system documentation and configs
#
# See subdirectories for specific BUILD.bazel files

exports_files(["CMakeLists.txt"])
