load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Test library
cc_library(
    name = "factorial",
    srcs = ["factorial.cc"],
    hdrs = ["factorial.h"],
    visibility = ["//visibility:public"],
)

# Unit tests
cc_test(
    name = "factorial_test",
    size = "small",
    srcs = ["factorial_test.cc"],
    deps = [
        ":factorial",
        "@googletest//:gtest_main",
    ],
)
