load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "example1",
    srcs = ["example1/main.go"],
    cgo = True,
)

go_binary(
    name = "example2",
    srcs = ["example2/main.go"],
    cgo = True,
)

go_binary(
    name = "example3",
    srcs = ["example3/main.go"],
    cgo = True,
)
