[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_015"
version = "0.1.0"
authors = [{ name = "Example Author", email = "author@example.com" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ChenYi015/playground"
Issues = "https://github.com/ChenYi015/playground/issues"
