load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "timer1",
    srcs = ["timer1.cc"],
    deps = [
        "@boost.asio//:boost.asio",
    ],
)

cc_binary(
    name = "timer2",
    srcs = ["timer2.cc"],
    deps = [
        "@boost.asio//:boost.asio",
    ],
)

cc_binary(
    name = "timer3",
    srcs = ["timer3.cc"],
    deps = [
        "@boost.asio//:boost.asio",
    ],
)

cc_binary(
    name = "timer4",
    srcs = ["timer4.cc"],
    deps = [
        "@boost.asio//:boost.asio",
    ],
)

cc_binary(
    name = "timer5",
    srcs = ["timer5.cc"],
    deps = [
        "@boost.asio//:boost.asio",
    ],
)
